# socolors

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml
examples/: example.py
socolors/: __init__.py
socolors/styles/: notebook.mplstyle  sobase.mplstyle
socolors/styles/journals/: apj-fullwidth.mplstyle  apj.mplstyle  jcap-fullwidth.mplstyle  jcap.mplstyle  mnras-fullwidth.mplstyle  mnras.mplstyle
